# HTS-Network

./: CMakeLists.txt
include/: EXPORTS.h  ListMessageElement.h  client.h  deletemessage.h  directory.h  file.h  ldaplogin.h  listmessage.h  listmessageelement.h  login.h  mail.h  message.h  messageexception.h  networkbase.h  read.h  serializer.h  server.h  session.h  standard_messages.h
src/: client.cpp  file.cpp  listmessage.cpp  listmessageelement.cpp  networkbase.cpp  serializer.cpp  server.cpp  session.cpp
src/client/: client.cpp  client_main.cpp
src/server/: directory.cpp  ldaplogin.cpp  server.cpp  server_main.cpp
